erDiagram
    IM_ACCOUNT {
        TEXT user_id PK
        TEXT nickname
    }

    CHAT_GROUP {
        TEXT group_id PK
        TEXT group_name
    }

    CONVERSATION {
        TEXT conversation_id PK
        TEXT owner_user_id FK
        TEXT conversation_scene "private/group/temp"
        TEXT peer_user_id FK "对端"
        TEXT group_id FK "群聊关联"
        TEXT last_message_id FK "最后消息"
        TEXT last_read_seq
        INTEGER unread_count
        INTEGER is_pinned
        INTEGER is_muted
    }

    MESSAGE {
        TEXT message_id PK
        TEXT message_scene "private/group/temp"
        TEXT peer_id
        TEXT message_seq "场景内序号"
        TEXT sender_user_id FK
        TEXT group_id FK
        TEXT bot_id "反规范化"
        TEXT session_id FK "调试归属"
        TEXT content_json "消息段JSON"
        TEXT quoted_message_id FK "引用消息"
        INTEGER is_recalled
        INTEGER created_at
    }

    MESSAGE_REACTION {
        TEXT reaction_id PK
        TEXT message_id FK
        TEXT operator_user_id FK
        TEXT face_id
        INTEGER is_add "添加/移除"
    }

    POKE {
        TEXT poke_id PK
        TEXT sender_user_id FK
        TEXT target_user_id FK
        TEXT message_scene "private/group"
        TEXT peer_id
        INTEGER is_recalled
    }

    IM_ACCOUNT ||--o{ CONVERSATION : "owns, 1:N"
    IM_ACCOUNT ||--o{ MESSAGE : "is_sender, 1:N"
    CHAT_GROUP ||--o{ CONVERSATION : "is_peer, 1:N"
    CHAT_GROUP ||--o{ MESSAGE : "hosts_messages, 1:N"
    CONVERSATION ||--o{ MESSAGE : "displays, 1:N"
    MESSAGE ||--o{ MESSAGE : "quoted_by, 1:N"
    MESSAGE ||--o{ MESSAGE_REACTION : "has, 1:N"
    IM_ACCOUNT ||--o{ MESSAGE_REACTION : "operates, 1:N"
    IM_ACCOUNT ||--o{ POKE : "sends_poke, 1:N"
